--- a/ParkingLotManagement/ParkingLotManagement.csproj
+++ b/ParkingLotManagement/ParkingLotManagement.csproj
@@ -89,6 +89,19 @@
     <Compile Include="AdminLogin.Designer.cs">
       <DependentUpon>AdminLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="AdminMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminMain.Designer.cs">
+      <DependentUpon>AdminMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Floor.cs" />
+    <Compile Include="ManageParkingLots.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ManageParkingLots.Designer.cs">
+      <DependentUpon>ManageParkingLots.cs</DependentUpon>
+    </Compile>
     <Compile Include="ParkingLots.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +128,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AdminLogin.resx">
       <DependentUpon>AdminLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminMain.resx">
+      <DependentUpon>AdminMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ManageParkingLots.resx">
+      <DependentUpon>ManageParkingLots.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ParkingLots.resx">
       <DependentUpon>ParkingLots.cs</DependentUpon>
